added system functions. working on cell modification. added some JS and click actions

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,8 @@
-<p>
-  Modify me in `app/views/homes/index.html.erb` or change the root directive in
-  `config/routes.rb`
-</p>
+<p> welcome to your system </p>
+<% if @cur_sys == nil %>
+  <p><%= link_to "new game", new_system_path(@system) %></p>
+<% else %>
+  <p><%= link_to "continue", systems_path(@cur_sys) %></p><br>
+  <%= link_to "restart game", { controller: :systems, action: :destroy, id: @cur_sys.id },
+  method: :delete, data: { confirm: 'you sure? you can not recover your system.'} %>
+<% end %>
