dealing with stack level BS

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,4 @@
-<p> welcome to your system </p>
+<p> welcome to immunity </p>
 <% if @cur_sys == nil %>
   <p><%= link_to "new game", new_system_path(@system) %></p>
 <% else %>
