--- a/app/views/systems/index.html.erb
+++ b/app/views/systems/index.html.erb
@@ -7,20 +7,23 @@
         <div id="parent"><%= link_to "generate B cells",
           new_system_cell_path(@system) %> || <div id='popup'
             style="display: none"> to combat the enemy viruses. CAREFUL though.
-            more cells risk greater subjugation from viruses.</div>
+            more cells risk greater subjugation from viruses.</div><br>
         <div id="parent1"><%= link_to "activate pyrogenation",
           system_path(@system), method: :PUT %> || <div id='popup1'
             style="display: none"><%= "#{@system.pyrogenation} remaining. " %>
             release pyrogens to induce fever. will reduce rate of
             reproduction to both viruses and cells. ideal proliferation occurs
-            at 98.6º</div>
-            <% binding.pry %>
-        <div id="parent2"><%= link_to "initiate apoptosis",
-        { controller: :cells, action: :destroy, system_id: @system.id },
-        method: :delete  %> || <div id='popup2'
-          style='display: none'><%= "#{@system.apoptosis} remaining. " %>
-          programmed cell death. remove all antigenic cells.
-        </div>
+            at 98.6º</div><br>
+        <% if Cell.where(system: @system) != [] %>
+          <div id="parent2"><%= link_to "initiate apoptosis",
+          { controller: :cell, action: :destroy, system: @system },
+          method: :delete  %> || <div id='popup2'
+            style='display: none'><%= "#{@system.apoptosis} remaining. " %>
+            programmed cell death. remove all antigenic cells.
+          </div>
+        <% else %>
+          <div id="cell-less"><%= "no cells. o noes!" %></div>
+        <% end %>
       </div>
 
     <h1>system status</h1>
