--- a/app/views/systems/index.html.erb
+++ b/app/views/systems/index.html.erb
@@ -1,110 +1,119 @@
-<div class="row">
-  <div class="large-12">
-<h2> greetings <%= current_user.username %></h2>
-<h1> your immune system is currently <%= @system.status %> </h1><br>
-<h1> Turn#  <%= @system.order %> </h1><br>
-      <div>
-        <div id="parent"><%= link_to "generate B cells",
-          new_system_cell_path(@system) %> || <div id='popup'
-            style="display: none"> to combat the enemy viruses. CAREFUL though.
-            more cells risk greater subjugation from viruses.</div>
-        <div id="parent1"><%= link_to "activate pyrogenation",
-          system_path(@system), method: :PUT %> || <div id='popup1'
-            style="display: none"><%= "#{@system.pyrogenation} remaining. " %>
-            release pyrogens to induce fever. will reduce rate of
-            reproduction to both viruses and cells. ideal proliferation occurs
-            at 98.6º</div>
-        <div id="parent2"><%= link_to "initiate apoptosis",
-          system_cell_path(@system, @cells), action: :destroy %> ||
-        <div id='popup2'
-          style='display: none'><%= "#{@system.apoptosis} remaining. " %>
-          programmed cell death. remove all antigenic cells.
+<% if @system.stage == "adaptive" %>
+  <div class="row">
+    <div class="large-12">
+  <h2> greetings <%= current_user.username %></h2>
+  <h1> your immune system is currently <%= @system.status %> </h1><br>
+  <h1> Turn#  <%= @system.order %> </h1><br>
+        <div>
+          <div id="parent"><%= link_to "generate B cells",
+            new_system_cell_path(@system) %> || <div id='popup'
+              style="display: none"> to combat the enemy viruses. CAREFUL though.
+              more cells risk greater subjugation from viruses.</div>
+          <div id="parent1"><%= link_to "activate pyrogenation",
+            system_path(@system), method: :PUT %> || <div id='popup1'
+              style="display: none"><%= "#{@system.pyrogenation} remaining. " %>
+              release pyrogens to induce fever. will reduce rate of
+              reproduction to both viruses and cells. ideal proliferation occurs
+              at 98.6º</div>
+          <div id="parent2"><%= link_to "initiate apoptosis",
+            system_cell_path(@system, @cells), action: :destroy %> ||
+          <div id='popup2'
+            style='display: none'><%= "#{@system.apoptosis} remaining. " %>
+            programmed cell death. remove all antigenic cells.
+          </div>
         </div>
-      </div>
 
-    <h1>system status</h1>
+      <h1>system status</h1>
+          <table>
+            <tr>
+              <th>differentiation</th>
+              <th>memory</th>
+              <th>apoptosis</th>
+              <th>pyrogenation</th>
+              <th></th>
+            </tr>
+
+            <tr>
+              <td><%= @system.differentiation? %></td>
+              <td><%= "#{@system.memory}%" %></td>
+              <td><%= @system.apoptosis? %></td>
+              <td><%= @system.pyrogenation? %></td>
+            </tr>
+        </table>
+
+      <h1>cell status</h1>
         <table>
           <tr>
-            <th>differentiation</th>
-            <th>memory</th>
-            <th>apoptosis</th>
-            <th>pyrogenation</th>
+            <th>cells</th>
+            <th>antigens</th>
+            <th>antibodies</th>
             <th></th>
           </tr>
 
           <tr>
-            <td><%= @system.differentiation? %></td>
-            <td><%= "#{@system.memory}%" %></td>
-            <td><%= @system.apoptosis? %></td>
-            <td><%= @system.pyrogenation? %></td>
-          </tr>
-      </table>
-
-    <h1>cell status</h1>
-      <table>
-        <tr>
-          <th>cells</th>
-          <th>antigens</th>
-          <th>antibodies</th>
-          <th></th>
-        </tr>
-
-        <tr>
-          <td><%= @cells.count %></td>
-          <% antigens = 0 %>
-          <% antibodies = 0 %>
-          <% @cells.each do |cell| %>
-            <% if cell.status == "antigen" %>
-              <% antigens += 1 %>
-            <% elsif cell.status == "antibody" %>
-              <% antibodies += 1 %>
-            <% end %>
-          <% end %>
-          <% if @cells.count != 0 %>
-            <td><%= "#{(antigens/@cells.count)*100}%" %></td>
-            <td><%= "#{(antibodies/@cells.count)*100}%" %></td>
-            <% else %>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
-          <% end %>
-        </tr>
-    </table>
-
-    <h1>virus status</h1>
-        <table>
-          <tr>
-            <th>viri</th>
-            <th>lysogenic</th>
-            <th>lytic</th>
-            <th>latent</th>
-            <th></th>
-          </tr>
-
-          <tr>
-            <td><%= @viri.count %></td>
-            <% latent = 0 %>
-            <% lysogenic = 0 %>
-            <% lytic = 0 %>
-            <% @viri.each do |virus| %>
-              <% if virus.status == "latent" %>
-                <%  latent += 1 %>
-              <% elsif virus.status == "lysogenic" %>
-                <%  lysogenic += 1 %>
-              <% elsif virus.status == "lytic" %>
-                <%  lytic += 1 %>
+            <td><%= @cells.count %></td>
+            <% antigens = 0 %>
+            <% antibodies = 0 %>
+            <% @cells.each do |cell| %>
+              <% if cell.status == "antigen" %>
+                <% antigens += 1 %>
+              <% elsif cell.status == "antibody" %>
+                <% antibodies += 1 %>
               <% end %>
             <% end %>
-            <% if @viri.count != 0 %>
-              <td><%= "#{(lysogenic/@viri.count)*100}%" %></td>
-              <td><%= "#{(lytic/@viri.count)*100}%" %></td>
-              <td><%= "#{(latent/@viri.count)*100}%" %></td>
-            <% else %>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
+            <% if @cells.count != 0 %>
+              <td><%= "#{(antigens/@cells.count)*100}%" %></td>
+              <td><%= "#{(antibodies/@cells.count)*100}%" %></td>
+              <% else %>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
             <% end %>
           </tr>
       </table>
+
+      <h1>virus status</h1>
+          <table>
+            <tr>
+              <th>viri</th>
+              <th>lysogenic</th>
+              <th>lytic</th>
+              <th>latent</th>
+              <th></th>
+            </tr>
+
+            <tr>
+              <td><%= @viri.count %></td>
+              <% latent = 0 %>
+              <% lysogenic = 0 %>
+              <% lytic = 0 %>
+              <% @viri.each do |virus| %>
+                <% if virus.status == "latent" %>
+                  <%  latent += 1 %>
+                <% elsif virus.status == "lysogenic" %>
+                  <%  lysogenic += 1 %>
+                <% elsif virus.status == "lytic" %>
+                  <%  lytic += 1 %>
+                <% end %>
+              <% end %>
+              <% if @viri.count != 0 %>
+                <td><%= "#{(lysogenic/@viri.count)*100}%" %></td>
+                <td><%= "#{(lytic/@viri.count)*100}%" %></td>
+                <td><%= "#{(latent/@viri.count)*100}%" %></td>
+              <% else %>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+              <% end %>
+            </tr>
+        </table>
+    </div>
   </div>
-</div>
+<% else %>
+<div class="row">
+  <div class="large-12">
+    <h2> innate stage initiated. viruses are attacking! </h2>
+    <h1> you have <%= "#{@system.meta_points}" %> metabolism points to spend.
+      hover over each to read the effects. </h1>
+      <%= render partial: "stages/cytokines", locals: { innate: @innate } %>
+<% end %>
